kube-files/deployment-njs-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: njs-app-deploy
  labels:
    app: njs-app
    test: test
  annotations:
    fluxcd.io/tag.njs-app: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: njs-app
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: njs-app
    spec:
      containers:
      - name: njs-app
        image: quay.io/pbalellu/njs-demo-app
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        # livenessProbe:
        #   httpGet:
        #     path: /status
        #     port: 5000
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "500m"
#      tolerations:
#      - key: "cattle.io/os"
#        value: "linux"
#        effect: "NoSchedule"      
# do i need the above commented section
