kube-files/eks-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: njs-service
  labels:
    app: njs-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: njs-app
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
