kube-files/services-njs-app.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
  name: njs-service
  labels:
    app: njs-app
spec:
  type: LoadBalancer
#  type: NodePort
  selector:
#    app.kubernetes.io/name: njs-app
    app: njs-app
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
