kube-files/ude-demoapp-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ude-demo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ude-demo-app
  name: njs-app-deploy
  labels:
    app: njs-app
    test: test
  annotations:
    fluxcd.io/tag.njs-app: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: njs-app
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: njs-app
    spec:
      containers:
      - name: njs-app
        image: quay.io/pbalellu/njs-demo-app
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
  name: njs-service
  namespace: ude-demo-app
  labels:
    app: njs-app
spec:
  type: LoadBalancer
  selector:
    app: njs-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
