kube-files/ingress-njs-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hello-njs-app
  name: njs-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: njs-service
              port:
                number: 80
